<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/name_team_a"
                android:textColor="#616161"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/heading_total"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/default_score"
                android:textColor="#000000"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/heading_power_play"
                android:layout_marginTop="8dp"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_a_pp_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/default_score"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/heading_short_handed"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_a_sh_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/default_score"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                style="@style/ButtonTheme"
                android:id="@+id/add_a_even_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addEvenStrengthGoals"
                android:text="@string/even_strength" />

            <Button
                style="@style/ButtonTheme"
                android:id="@+id/add_a_pp_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addPowerPlayGoal"
                android:text="@string/power_play" />

            <Button
                style="@style/ButtonTheme"
                android:id="@+id/add_a_sh_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addShortHandedGoal"
                android:text="@string/short_handed" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/name_team_b"
                android:textColor="#616161"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/heading_total"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/default_score"
                android:textColor="#000000"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/heading_power_play"
                android:layout_marginTop="8dp"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_b_pp_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/default_score"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/heading_short_handed"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_b_sh_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/default_score"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                style="@style/ButtonTheme"
                android:id="@+id/add_b_even_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addEvenStrengthGoals"
                android:text="@string/even_strength" />

            <Button
                style="@style/ButtonTheme"
                android:id="@+id/add_b_pp_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addPowerPlayGoal"
                android:text="@string/power_play" />

            <Button
                style="@style/ButtonTheme"
                android:id="@+id/add_b_sh_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addShortHandedGoal"
                android:text="@string/short_handed" />

        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:text="@string/button_name" />

</RelativeLayout>

